--- a/Telescope.csproj
+++ b/Telescope.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Bencodex" Version="0.4.0" />
     <PackageReference Include="Cocona.Lite" Version="2.0.3" />
+    <PackageReference Include="DiffPlex" Version="1.7.1" />
     <PackageReference Include="Libplanet" Version="0.40.3" />
     <PackageReference Include="Libplanet.RocksDBStore" Version="0.40.3" />
     <PackageReference Include="Terminal.Gui" Version="1.8.2" />
