--- a/Telescope.csproj
+++ b/Telescope.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bencodex" Version="0.7.0-dev.20220923062845" />
+    <PackageReference Include="Bencodex.Json" Version="0.7.0-dev.20220923062845" />
     <PackageReference Include="Cocona.Lite" Version="2.0.3" />
     <PackageReference Include="DiffPlex" Version="1.7.1" />
     <PackageReference Include="Libplanet" Version="0.43.1" />
